--- a/home.html
+++ b/home.html
@@ -63,7 +63,64 @@
         </button>
       </nav>
     </div>
-    
+    <div id="main" class="row">
+      <div id="carouselExampleRide" class="carousel slide carousel-fade p-0 mb-5" data-bs-ride="carousel">
+        <div class="carousel-indicators z-3">
+          <button type="button" data-bs-target="#carouselExampleRide" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleRide" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleRide" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/carosel/carosel.1.jpg" class="d-block w-100" alt="...">
+            <div class="myShadow"></div>
+            <div class="details">
+              <div class="logoName"><img src="img/carosel/logoname1.png" alt=""></div>
+              <div class="name h2 my-3"><p>ستاره بازی</p></div>
+              <div class="actions">
+                <button class="btn btn-outline-light">خرید بیلیت</button>
+                <button class="btn btn-light"> نمایش <span class="fa fa-play-circle"></span></button>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/carosel/carosel.2.jpg" class="d-block w-100" alt="...">
+            <div class="myShadow"></div>
+            <div class="details">
+              <div class="logoName"><img src="img/carosel/logoname2.png" alt=""></div>
+              <div class="name h2 my-3"><p>داوینچی</p></div>
+              <div class="actions">
+                <button class="btn btn-outline-light">اطلاعات بیشتر</button>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/carosel/carosel.3.jpg" class="d-block w-100" alt="...">
+            <div class="myShadow"></div>
+            <div class="details">
+              <div class="logoName"><img src="img/carosel/logoname3.png" alt=""></div>
+              <div class="name h2 my-3"><p>زنبور کارگر</p></div>
+              <div class="actions">
+                <button class="btn btn-danger">به زودی</button>
+              </div>
+            </div>
+            <div class="ekran">
+              <img src="img/carosel/ekran.png" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="btns">
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </div>
   </div>
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   <script src="node_modules/jquery/dist/jquery.js"></script>
