adding responsive live games carosel & correcting main caarousel box shadow

--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="slick/slick.css">
 </head>
-<body class="bg-black">
+<body class="bg-primary">
   <div class="container-fluid">
     <div id="headerTop" class="row">
       <nav class="navbar navbar-expand-lg bg-transparent justify-content-start position-absolute px-md-5 py-3" dir="rtl">
@@ -125,8 +125,8 @@
         </div>
       </div>
       <div class="bottomCarousel position-absolute z-3">
-        <button class="slick-prev position-absolute"><span class="fa fa-angle-left"></span></button>
-        <button class="slick-next position-absolute"><span class="fa fa-angle-right"></span></button>
+        <button class="slick-prev prev position-absolute"><span class="fa fa-angle-left"></span></button>
+        <button class="slick-next next position-absolute"><span class="fa fa-angle-right"></span></button>
         <div class="slickCarousel">
         <div class="slickCarouselProduct">
           <img class="img-fluid" src="img/carosel/slickCarousel/1.jpg" alt="">
@@ -154,6 +154,102 @@
         </div>
         </div>
       </div>
+    </div>
+    <div id="live" class="row position-relative">
+      <button class="live-prev prev position-absolute z-3"><span class="fa fa-angle-left"></span></button>
+      <button class="live-next next position-absolute"><span class="fa fa-angle-right"></span></button>
+        <div class="slickCarouselLive">
+        <div class="slickCarouselProduct">
+          <div class="card w-100 border-0 rounded-4 overflow-hidden bg-primary" style="width: 18rem;">
+            <img src="img/carosel/live/1.jpg" class="card-img-top" alt="...">
+            <div class="card-body text-white" dir="rtl" style="background-color: #222327;">
+              <h5 class="card-title">فوتبال چلسی - لسترسیتی</h5>
+              <p class="card-text">جام حذفی انگلیس</p>
+              <div class="loading d-flex">
+                <div class="spinner-grow text-danger " role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+                <p class="m-0 my-auto ms-2 text-danger">در حال پخش</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="slickCarouselProduct">
+          <div class="card w-100 border-0 rounded-4 overflow-hidden bg-primary" style="width: 18rem;">
+            <img src="img/carosel/live/2.jpg" class="card-img-top" alt="...">
+            <div class="card-body text-white" dir="rtl" style="background-color: #222327;">
+              <h5 class="card-title">فوتبال چلسی - لسترسیتی</h5>
+              <p class="card-text">جام حذفی انگلیس</p>
+              <div class="loading d-flex">
+                <div class="spinner-grow text-danger " role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+                <p class="m-0 my-auto ms-2 text-danger">در حال پخش</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="slickCarouselProduct">
+          <div class="card w-100 border-0 rounded-4 overflow-hidden bg-primary" style="width: 18rem;">
+            <img src="img/carosel/live/3.jpg" class="card-img-top" alt="...">
+            <div class="card-body text-white" dir="rtl" style="background-color: #222327;">
+              <h5 class="card-title">فوتبال چلسی - لسترسیتی</h5>
+              <p class="card-text">جام حذفی انگلیس</p>
+              <div class="loading d-flex">
+                <div class="spinner-grow text-danger " role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+                <p class="m-0 my-auto ms-2 text-danger">در حال پخش</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="slickCarouselProduct">
+          <div class="card w-100 border-0 rounded-4 overflow-hidden bg-primary" style="width: 18rem;">
+            <img src="img/carosel/live/4.jpg" class="card-img-top" alt="...">
+            <div class="card-body text-white" dir="rtl" style="background-color: #222327;">
+              <h5 class="card-title">فوتبال چلسی - لسترسیتی</h5>
+              <p class="card-text">جام حذفی انگلیس</p>
+              <div class="loading d-flex">
+                <div class="spinner-grow text-danger " role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+                <p class="m-0 my-auto ms-2 text-danger">در حال پخش</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="slickCarouselProduct">
+          <div class="card w-100 border-0 rounded-4 overflow-hidden bg-primary" style="width: 18rem;">
+            <img src="img/carosel/live/5.jpg" class="card-img-top" alt="...">
+            <div class="card-body text-white" dir="rtl" style="background-color: #222327;">
+              <h5 class="card-title">فوتبال چلسی - لسترسیتی</h5>
+              <p class="card-text">جام حذفی انگلیس</p>
+              <div class="loading d-flex">
+                <div class="spinner-grow text-danger " role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+                <p class="m-0 my-auto ms-2 text-danger">در حال پخش</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="slickCarouselProduct">
+          <div class="card w-100 border-0 rounded-4 overflow-hidden bg-primary" style="width: 18rem;">
+            <img src="img/carosel/live/6.jpg" class="card-img-top" alt="...">
+            <div class="card-body text-white" dir="rtl" style="background-color: #222327;">
+              <h5 class="card-title">فوتبال چلسی - لسترسیتی</h5>
+              <p class="card-text">جام حذفی انگلیس</p>
+              <div class="loading d-flex">
+                <div class="spinner-grow text-danger " role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+                <p class="m-0 my-auto ms-2 text-danger">در حال پخش</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
     </div>
   </div>
 
