--- a/search.html
+++ b/search.html
@@ -64,7 +64,290 @@
               </button>
             </nav>
         </div>
+        <div class="row search ps-5 justify-content-end">
+            <div class="input-group mb-3 searchInput p-4 rounded-4 flex-grow-1" dir="rtl">
+                <span class="fa fa-search text-white m-auto fa-rotate-90"></span>
+                <input type="text" class="form-control border-0" placeholder="فیلم، سریال، بازیگر و ژانر" aria-label="Username" aria-describedby="basic-addon1">
+            </div> 
+            <ul class="list-group px-4 mx-5 position-fixed rounded-4" dir="rtl">
+                <li class="list-group-item border-0 py-4 d-flex justify-content-between">
+                    <p class="m-0 h4 text-white">
+                        فیلترها
+                    </p>
+                    <p class="m-0 h4 onit">
+                        حذف همه
+                    </p>
+                </li>
+                <li class="list-group-item border-0 border-bottom">
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                        <label class="form-check-label text-white" for="inlineCheckbox1">فیلم</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                        <label class="form-check-label text-white" for="inlineCheckbox2">سریال</label>
+                    </div>
+                </li>
+                <!--by opening one category all other ones will open becuse each one needs a difrent id and data-bs-target -->
+                <li class="list-group-item border-0 border-bottom">
+                    <p class="d-inline-flex gap-1 m-0">
+                        <button class="btn text-white" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                          ژانرها
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapseExample">
+                        <div class="card card-body bg-transparent text-white border-0" dir="rtl">
+                            <ul class="list-group w-100 p-0">
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <input type="email" class="form-control categorySearch" id="exampleFormControlInput1" placeholder="name@example.com">
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary"></li>
+                                <li class="list-group-item border-0 bg-secondary text-white-50">همه ژانرها</li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                        <label class="form-check-label text-white" for="flexRadioDefault1">
+                                          وهشت
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                                        <label class="form-check-label text-white" for="flexRadioDefault2">
+                                          اجتماعی
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+                                        <label class="form-check-label text-white" for="flexRadioDefault3">
+                                          درام
+                                        </label>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item border-0 border-bottom">
+                    <p class="d-inline-flex gap-1 m-0">
+                        <button class="btn text-white" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                          ژانرها
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapseExample">
+                        <div class="card card-body bg-transparent text-white border-0" dir="rtl">
+                            <ul class="list-group w-100 p-0">
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <input type="email" class="form-control categorySearch" id="exampleFormControlInput1" placeholder="name@example.com">
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary"></li>
+                                <li class="list-group-item border-0 bg-secondary text-white-50">همه ژانرها</li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                        <label class="form-check-label text-white" for="flexRadioDefault1">
+                                          وهشت
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                                        <label class="form-check-label text-white" for="flexRadioDefault2">
+                                          اجتماعی
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+                                        <label class="form-check-label text-white" for="flexRadioDefault3">
+                                          درام
+                                        </label>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item border-0 border-bottom">
+                    <p class="d-inline-flex gap-1 m-0">
+                        <button class="btn text-white" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                          ژانرها
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapseExample">
+                        <div class="card card-body bg-transparent text-white border-0" dir="rtl">
+                            <ul class="list-group w-100 p-0">
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <input type="email" class="form-control categorySearch" id="exampleFormControlInput1" placeholder="name@example.com">
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary"></li>
+                                <li class="list-group-item border-0 bg-secondary text-white-50">همه ژانرها</li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                        <label class="form-check-label text-white" for="flexRadioDefault1">
+                                          وهشت
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                                        <label class="form-check-label text-white" for="flexRadioDefault2">
+                                          اجتماعی
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+                                        <label class="form-check-label text-white" for="flexRadioDefault3">
+                                          درام
+                                        </label>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item border-0 border-bottom">
+                    <p class="d-inline-flex gap-1 m-0">
+                        <button class="btn text-white" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                          ژانرها
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapseExample">
+                        <div class="card card-body bg-transparent text-white border-0" dir="rtl">
+                            <ul class="list-group w-100 p-0">
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <input type="email" class="form-control categorySearch" id="exampleFormControlInput1" placeholder="name@example.com">
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary"></li>
+                                <li class="list-group-item border-0 bg-secondary text-white-50">همه ژانرها</li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                        <label class="form-check-label text-white" for="flexRadioDefault1">
+                                          وهشت
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                                        <label class="form-check-label text-white" for="flexRadioDefault2">
+                                          اجتماعی
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+                                        <label class="form-check-label text-white" for="flexRadioDefault3">
+                                          درام
+                                        </label>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item border-0 border-bottom">
+                    <p class="d-inline-flex gap-1 m-0">
+                        <button class="btn text-white" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                          ژانرها
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapseExample">
+                        <div class="card card-body bg-transparent text-white border-0" dir="rtl">
+                            <ul class="list-group w-100 p-0">
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <input type="email" class="form-control categorySearch" id="exampleFormControlInput1" placeholder="name@example.com">
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary"></li>
+                                <li class="list-group-item border-0 bg-secondary text-white-50">همه ژانرها</li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                        <label class="form-check-label text-white" for="flexRadioDefault1">
+                                          وهشت
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                                        <label class="form-check-label text-white" for="flexRadioDefault2">
+                                          اجتماعی
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+                                        <label class="form-check-label text-white" for="flexRadioDefault3">
+                                          درام
+                                        </label>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item border-0">
+                    <p class="d-inline-flex gap-1 m-0">
+                        <button class="btn text-white" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                          ژانرها
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapseExample">
+                        <div class="card card-body bg-transparent text-white border-0" dir="rtl">
+                            <ul class="list-group w-100 p-0">
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <input type="email" class="form-control categorySearch" id="exampleFormControlInput1" placeholder="name@example.com">
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary"></li>
+                                <li class="list-group-item border-0 bg-secondary text-white-50">همه ژانرها</li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                        <label class="form-check-label text-white" for="flexRadioDefault1">
+                                          وهشت
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                                        <label class="form-check-label text-white" for="flexRadioDefault2">
+                                          اجتماعی
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item border-0 bg-secondary">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+                                        <label class="form-check-label text-white" for="flexRadioDefault3">
+                                          درام
+                                        </label>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+              </ul>
+        </div>
     </div>
+
+
+
+   
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="slick/slick.js"></script>
